<resources>
    <string name="app_name">FitMirrorApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_command_menu">commandMenu</string>
    <string name="title_activity_enter_health_info">enterHealthInfo</string>
    <string name="title_activity_daily_image">daily_image</string>
    <string name="title_activity_image_time_lapse">image_time_lapse</string>

    <string name="header_image_description">repeatable shadow image for header</string>
    <string name="submit_button_text">SUBMIT</string>
    <string name="new_user_button_text">NEW USER</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="date_placeholder_text">mm/dd/yyyy</string>

    <string name="user_login_header_text">USER LOGIN</string>
    <string name="user_login_username_header_text">User Name:</string>
    <string name="user_login_name_placeholder_text">Enter Name Here</string>
    <string name="user_login_password_header_text">Password:</string>
    <string name="user_login_password_placeholder_text">Enter Password Here</string>
    <string name="user_login_forgot_username_text">forgot username?</string>
    <string name="user_login_forgot_pass_text">forgot password?</string>
    <string name="title_activity_manage_data">manage_data</string>

    <string name="title_new_user_first_name">First Name:</string>
    <string name="new_user_first_name_hint">Enter First Name</string>
    <string name="title_new_user_last_name">Last Name:</string>
    <string name="new_user_last_name_hint">Enter Last Name</string>
    <string name="new_user_password_confirm_hint">Confirm Password</string>
    <string name="title_new_user_password_hint">Password Hint:</string>
    <string name="new_user_password_reminder_hint">Enter your hint</string>
    <string name="title_new_user_age">Age:</string>
    <string name="new_user_age_hint">Enter your age</string>
    <string name="title_user_sex_male">Male:</string>
    <string name="title_user_sex_female">Female:</string>

    <string name="manage_data_header_text">MANAGE DATA</string>
    <string name="manage_data_choose_date_placeholder_text">Choose Desired Date:</string>
    <string name="manage_data_user_info_help">The data for the date specified will be shown on the mirror. It will be possible to make edits after submitting the date.</string>
    <string name="title_activity_view_data">view_data</string>

    <string name="view_data_header_text">VIEW HEALTH DATA</string>
    <string name="view_data_single_header">Single Data Views:</string>
    <string name="view_data_single_image_data_radio_button_text">Image and Data:</string>
    <string name="view_data_single_data_radio_button_text">Data:</string>
    <string name="view_data_single_image_radio_button_text">Image:</string>
    <string name="view_data_double_header">Side-by-Side Views:</string>
    <string name="view_data_double_image_data_radio_button_text">Images and Data:</string>
    <string name="view_data_double_data_radio_button_text">Data:</string>
    <string name="view_data_double_image_radio_button_text">Images:</string>
    <string name="view_data_first_date_header_text">Date 1:</string>
    <string name="view_data_second_date_header_text">Date 2:</string>
    <string name="title_activity_data_analysis">data_analysis</string>

    <string name="data_analysis_header_text">DATA ANALYSIS</string>
    <string name="data_analysis_date_range_header">Choose Date Range:</string>
    <string name="data_analysis_from_entry_header">From:</string>
    <string name="data_analysis_to_entry_header">To:</string>
    <string name="data_analysis_prediction_radio_button_text">Include Prediction?</string>
    <string name="data_analysis_graph_style_header">Choose Graph Style:</string>
    <string name="data_analysis_line_radio_button_text">Line:</string>
    <string name="data_analysis_bar_radio_button_text">Bar:</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="bmi_range">range: 10-200</string>
    <string name="heart_rate_hint">BPM</string>
    <string name="temperature_hint">Fahrenheit</string>
    <string name="bp_diastolic_hint">bottom</string>
    <string name="bp_systolic_hint">top</string>
    <string name="weight_hint">lbs</string>
    <string name="seconds_placeholder">seconds</string>
    <string name="command_menu_title">COMMAND MENU</string>
    <string name="command_menu_enter_health_info">Enter Health Info</string>
    <string name="command_menu_enter_daily_image">Take Daily Image</string>
    <string name="command_menu_enter_time_lapse">Image Time Lapse</string>
    <string name="command_menu_manage_daily">Manage Daily Data</string>
    <string name="command_menu_view_info">View Personal Info</string>
    <string name="command_menu_data_analysis">Data Analytics</string>
    <string name="title_image_time_lapse">IMAGE TIME LAPSE</string>
    <string name="title_choose_date_range">Choose Date Range:</string>
    <string name="title_choose_time_interval">Choose Time Interval:</string>
    <string name="title_10_seconds">10 sec:</string>
    <string name="title_20_seconds">20 sec:</string>
    <string name="title_60_seconds">60 sec:</string>
    <string name="title_custom_seconds">Custom:</string>
    <string name="header_health_info">ENTER INFO</string>
    <string name="title_weight_field">Weight:</string>
    <string name="title_bp_systolic_header">BP: Systolic</string>
    <string name="title_bp_diastolic_header">Diastolic</string>
    <string name="title_temperature_header">Temperature:</string>
    <string name="title_heart_rate_header">Heart Rate:</string>
    <string name="title_bmi_header">BMI:</string>
    <string name="title_single_date_header">Date:</string>
    <string name="title_daily_image_header">DAILY IMAGE</string>
    <string name="title_pre_picture_delay">Delay Before Picture:</string>
    <string name="title_5_seconds_header">5 sec:</string>
    <string name="title_no_delay_header">none:</string>
    <string name="begin_button_text">BEGIN</string>
    <string name="calibrate_camera_button_text">CALIBRATE CAMERA</string>
</resources>
